--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
 <!-- meta tags, links to css, etc. -->
 <title>DIG 245 View Source</title>
 
+<link href='assets/css/styles.css' rel='stylesheet'>
+
 </head>
 <body>
 
-<!-- visible content goes here -->
 <h1>DIG 245 View Source</h1>
+
+<script>
+  alert ("Hello")
+</script>
 
 </body>
 </html>
