--- a/index.html
+++ b/index.html
@@ -12,8 +12,35 @@
 
 <h1>DIG 245 View Source</h1>
 
+<h3>How to View Source Code (on a Windows Computer):</h3>
+<ol>
+  <li>Open up the Chrome browser.</li>
+  <li>Find a web page whose source code you would like to view.</li>
+  <li>Right-click on the page and select "View page source," or use the shortcut "ctrl+U".</li>
+  <li>A new tab with the code should appear!</li>
+</ol>
+
+<h3>What to do with Dev Tools:</h3>
+<ul>
+  <li>The "Elements" section allows you to edit the CSS code and see how the updates impact your page in real time.</li>
+  <li>In the "Console" section, you can check and edit Javascript for the webpage.</li>
+  <li>You can send secret messages in the "Console" code!</li>
+</ul>
+
+<h3>Metaphor</h3>
+  <p>Looking at the code is like pulling back the curtain. On the presentation-ready stage, much like a webpage, everything seems to run smoothly and seamlessly.
+     Behind the scenes is, to an untrained eye, chaos. But for those who understand the workings of HTML and other code, inspecting a webpage and revealing what's
+     behind the curtain can be informative in how the production actually runs (not by magic).</p>
+
+<h3>Secret Message</h3>
+
+<h3>Turtles!</h3>
+<img src="assets/img/turtle.jpg">
+<p class="turtles">Turtles are my favorite animal. I like there sense of calmness and go-with-the-flow.</p>
+
 <script>
-  alert ("Hello")
+  // alert("View Source");
+  console.log("Test");
 </script>
 
 </body>
