--- a/index.html
+++ b/index.html
@@ -22,25 +22,43 @@
 
 <h3>What to do with Dev Tools:</h3>
 <ul>
-  <li>The "Elements" section allows you to edit the CSS code and see how the updates impact your page in real time.</li>
-  <li>In the "Console" section, you can check and edit Javascript for the webpage.</li>
-  <li>You can send secret messages in the "Console" code!</li>
+  <li>The "Elements" section allows you to edit the CSS and HTML code and see how the updates impact your page in real time.</li>
+  <li>You can also scroll to or hide different elements by right-clicking specific lines of code to help you easily edit your page.</li>
+  <li>In the "Console" section, you can check and edit Javascript or CSS for the webpage, or even find a secret message!</li>
 </ul>
 
 <h3>Metaphor</h3>
-  <p>Looking at the code is like pulling back the curtain. On the presentation-ready stage, much like a webpage, everything seems to run smoothly and seamlessly.
+  <p>Looking at the code is like pulling back a curtain. On a presentation-ready stage, much like a webpage, everything seems to run smoothly and seamlessly.
      Behind the scenes is, to an untrained eye, chaos. But for those who understand the workings of HTML and other code, inspecting a webpage and revealing what's
      behind the curtain can be informative in how the production actually runs (not by magic).</p>
 
 <h3>Secret Message</h3>
 
+<p>First, open the
+  <a href="https://www.nytimes.com/" target="_blank">New York Times.</a>
+  Then, right-click and select "Inspect". Next, click on the "Console" option. View the secret message!</p>
+
+<div>
+<img src="assets/img/nyt.png">
+</div>
+
 <h3>Turtles!</h3>
 <img src="assets/img/turtle.jpg">
-<p class="turtles">Turtles are my favorite animal. I like there sense of calmness and go-with-the-flow.</p>
+<p class="turtles">Turtles are my favorite animal. I like their sense of calmness and go-with-the-flow.</p>
 
 <script>
   // alert("View Source");
-  console.log("Test");
+  console.log("See, isn't viewing the source code and console easy? Only a few steps and all of the page's code is at your fingertips!");
+</script>
+
+<script>
+  // alert("View Source");
+  console.log("Did you know that there are seven different species of sea turtles?");
+</script>
+
+<script>
+  // alert("View Source");
+  console.log("In case you're wondering, the seven are loggerheads, leatherbacks, hawksbill, olive ridley, Kemp's ridely, flatback, and green sea turtles!");
 </script>
 
 </body>
