--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <li>A new tab with the code should appear!</li>
 </ol>
 
-<h3>What To Do With Dev Tools:</h3>
+<h3>What to do with Dev Tools:</h3>
 <ul>
   <li>The "Elements" section allows you to edit the CSS and HTML code and see how the updates impact your page in real time.</li>
   <li>You can also scroll to or hide different elements by right-clicking specific lines of code to help you easily edit your page.</li>
